  * fixed BUG in SPARQL panel (on client, UI project) preventing language tagged property values to be shown (javscript null pointer exception)
  * added a new updateRoutine (see UpdateRoutines in resources package) for specifying the ModelType of main-project
    if it is not present (that is, if the main-project comes from an earlier version of SemanticTurkey)

version 0.7.1

  * created a new class: UpdateRoutines.java for hosting procedures for restoring integrity of folder
    SemanticTurkeyData coming from older installations of Semantic Turkey
  * fixed a missing case (when a new prefix-ns pair overwrites a previous prefix mapping) in which the user
    is prevented from changing mappings for prefixes owl, rdf, rdfs (and added the
  * weblinks are now visible on the editor panel - fixed bug on unreadable datatype property values populated
    with URLs (they should be active links opening the url in the browser) - forbidden change of owl, rdf and
    rdfs prefixes (this is required as some part of the UI code is currently using wired static strings
    prefixed qnames) - now when a rdf:Property is valued, it does not ask anymore: "do you want to add 'undefined' as a value for property?" but writes 'new value' instead of 'undefined'. Th
  * cleaning of SemTurkeyHTTP.jsm and other legacy code - bug fixes and enhancements in editor panel
  * removed old useless UI files - cleaned code to avoid warning produced by Mozilla extension tester
  * fixed bug in adding values for datatype properties through annotation/drag'n'drop action

version 0.7
date: 08-02-2008
  * major release with lot of new features and strong modification of the whole system
  * Main System:
    * Project-based ontology management. Now users can run ST in the traditional single-project continuous-editing
      of previous versions, or open specific new projects and decide if they need to be saved each time, or if
      they just are edited in real-time